[metadata]
name = fast-webflow
version = 0.2.3
author = Thomas Cilloni
author_email = tcilloni@outlook.com
description = A client library to communicate with the WebFlow API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tcilloni/fast-webflow
project_urls =
    Bug Tracker = https://github.com/tcilloni/fast-webflow/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.8

[options.packages.find]
where = src
